manifests/eigen-service-review/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eigen-service-review
  namespace: eigen-service
spec:
  selector:
    app: eigen-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
