manifests/eigen-service-review/patch-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eigen-service
spec:
  tls:
    - secretName: eigen-service-review-tls
      hosts:
        - "*.eigen-review.tmye.me"
